--- a/public/ce/button_ce.html
+++ b/public/ce/button_ce.html
@@ -5,7 +5,7 @@
 
 	</style>
 	
-	<button class="btn btn-secondary"></button>
+	<button type="button" class="btn btn-secondary"></button>
 
 </template>
 
