--- a/public/ce/headline_ce.html
+++ b/public/ce/headline_ce.html
@@ -22,16 +22,16 @@
 		this.extend();
 		}
 
-		get value() {
-			return this.getAttribute('value');
+		get title() {
+			return this.getAttribute('title');
 		}
 
-		set value(newValue) {
-			return this.setAttribute('value', newValue);
+		set title(newTitle) {
+			return this.setAttribute('title', newTitle);
 		}
 
 		static get observedAttributes() {
-            return ['value'];
+            return ['title'];
         };
 
 
@@ -41,79 +41,46 @@
 				that.shadowRoot.querySelector('span').textContent = obj;
 			};
 
-			this.view.updatedHeadline = function(obj) {
+			this.view.updatedHeadline = function() {
 				that.view.renderHeadline.call(that, that.model.getHeadline());
-			};
-
-			this.view.makeHeadlineRed = function() {
-				that.shadowRoot.querySelector('span').style.color = "red";
-			};
-
-			this.view.makeHeadlineBlue = function() {
-				that.shadowRoot.querySelector('span').style.color = "blue";
 			};
 		}
 
 		extendCtrl(that) {
-			//local
+			let parent;
+
+			this.ctrl.run = function() {
+				that.view.renderHeadline(that.title);
+			};	
+
+			//local - from model
 			this.ctrl.updatedHeadline = function() {
-				return that.view.updatedHeadline();
+				that.view.updatedHeadline();
+				eventDispatcher(parent.eventTarget, 'updatedtitlefromchild', that);
 			};
+
 
 			//parent
 			this.ctrl.headlineFromParent = function(e) {
-				console.log('e from parent');
-				console.log(e.detail);
-				that.value = e.detail;
-				return that.model.changeHeadlineFromParent(that.value);
+				parent = e.detail;
+				that.title = e.detail.title;
+				that.model.updateHeadline(that.title);
 			};
 
 			//global
-			this.ctrl.changeHeadline = function(e) {
-				that.value = e.detail.detail.changedAttribute.newVal;
-				return that.model.changeHeadline(e);
-			};
+			// this.ctrl.changeHeadline = function(e) {
+			// 	that.title = e.detail.detail.changedAttribute.newVal;
+			// 	return that.model.updateHeadline(that.title);
+			// };
 
-			this.ctrl.makeHeadlineRed = function(e) {
-				return that.view.makeHeadlineRed();
-			};
 
-			this.ctrl.blueIfOn = function(e) {
-				//console.log(e.detail.detail.changedAttribute);
-				if(e.detail.detail.changedAttribute.newVal === "on") {
-					that.view.makeHeadlineBlue();
-				} else {
-					that.view.makeHeadlineRed();
-				}
-			};
-
-			this.ctrl.changeSelect = function(e) {
-				console.log();
-				if (e.detail.detail.changedAttribute.name === 'value') {
-					return that.model.changeHeadlineFromSelect(e);
-				}
-			};
-			this.ctrl.run = function() {
-				console.log(that.value);
-				that.view.renderHeadline(that.value);
-			};	
 		}
 
 		extendModel(that) {
 			let headline = "";
 
-			this.model.changeHeadline = function(e) {
-				headline = e.detail.detail.changedAttribute.newVal;
-				eventDispatcher(that.eventTarget, 'updatedheadline');
-			};
-
-			this.model.changeHeadlineFromParent = function(newVal) {
+			this.model.updateHeadline = function(newVal) {
 				headline = newVal;
-				eventDispatcher(that.eventTarget, 'updatedheadline');
-			};
-
-			this.model.changeHeadlineFromSelect = function(e) {
-				headline = Number(e.detail.detail.changedAttribute.newVal) + 10;
 				eventDispatcher(that.eventTarget, 'updatedheadline');
 			};
 
