--- a/public/index.html
+++ b/public/index.html
@@ -133,9 +133,10 @@
 </section-output-ce>
 
 
-
-<p id="oslo"></p>
-<p id="stockholm"></p>
+<div id="dragtarget" style="display: inline-block; background-color: blue; padding: 10px">
+    <p id="oslo"></p>
+    <p id="stockholm"></p>
+</div>
     
     
 <!-- 
