Added stream receiver. Next to do. Stream sender

--- a/public/ce/button_ce.html
+++ b/public/ce/button_ce.html
@@ -55,6 +55,10 @@
 		extendCtrl(that) {
 			//local
 			this.ctrl.useraction = function(e) {
+
+
+
+				console.log('user action!')
 				if(that.toggle === "on") {
 					that.toggle = "off";
 				} else {
