--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
     <anykind-container-ce slot="anycontainer">
         <headline-ce title="Kalkylperiod" class="h4" slot="headline"></headline-ce>
         <headline-select-ce title="startår" selectedindex="0" slot="anyform" data-target="startyear"></headline-select-ce>
-        <headline-input-ce title="Kalkyllängd" value="" placeholder="Antal brukare..." slot="anyform" rc="posts" rs="hej"></headline-input-ce>     
+        <headline-input-ce title="Kalkyllängd" value="" placeholder="Antal brukare..." slot="anyform" sr="posts:hej@stream"></headline-input-ce>     
     </anykind-container-ce>
 
     <anykind-container-ce slot="anycontainer">
@@ -83,7 +83,7 @@
 
     <anykind-container-ce slot="anycontainer">
         <headline-ce title="Värmekostnader" class="h4" slot="headline"></headline-ce>
-        <headline-input-ce title="Antal kWh/kvm/år" value="" placeholder="Antal brukare..." slot="anyform"></headline-input-ce> 
+        <headline-input-ce title="Antal kWh/kvm/år" value="" placeholder="Antal brukare..." slot="anyform" sr="posts:hej@stream"></headline-input-ce> 
         <headline-select-ce title="Kostnad per kWh" selectedindex="0" slot="anyform"></headline-select-ce>
     </anykind-container-ce>
 
