--- a/public/ce/input_ce.html
+++ b/public/ce/input_ce.html
@@ -10,7 +10,7 @@
 	
 	<!-- <input type="text"></input> -->
 	<div class="input-group input-group-sm mb-3">
-		<input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm">
+		<input id="input" type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm">
 	  </div>
 
 </template>
@@ -72,6 +72,8 @@
 			let parent;
 
 			this.ctrl.run = function() {
+				
+
 				if (that.value !== null) {
 					that.view.renderValue(that.value);
 				}
